src/objects/Komunikacia__c.object
<CustomObject>
    <fields>
        <fullName>Byt__c</fullName>
        <label>Byt</label>
        <referenceTo>Byt__c</referenceTo>
        <relationshipLabel>Komunikácia</relationshipLabel>
        <relationshipName>Komunikacia</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Koment__c</fullName>
        <label>Koment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Koment_vytvoreny__c</fullName>
        <label>Koment vytvorený</label>
        <type>DateTime</type>
    </fields>
    <label>Komunikácia</label>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>Komunikácia Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Komunikácie</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>